@@ -429,7 +429,7 @@ def backup_get_mirrortime():
 
 def backup_final_init(rpout):
 	"""Open the backup log and the error log, create increments dir"""
-	global prevtime
+	global prevtime, incdir
 	if Log.verbosity > 0:
 		Log.open_logfile(Globals.rbdir.append("backup.log"))
 	checkdest_if_necessary(rpout)
@@ -438,8 +438,7 @@ def backup_final_init(rpout):
 """Time of Last backup is not in the past.  This is probably caused
 by running two backups in less than a second.  Wait a second a try again.""")
 	ErrorLog.open(Time.curtimestr, compress = Globals.compression)
-	inc_base = Globals.rbdir.append_path("increments")
-	if not inc_base.lstat(): inc_base.mkdir()
+	if not incdir.lstat(): incdir.mkdir()
 
 def backup_touch_curmirror_local(rpin, rpout):
 	"""Make a file like current_mirror.time.data to record time
